<resources>
    <string name="app_name">Driving Data Droid</string>
    <string name="logo_description">Logo of the application</string>
    <string name="user_id_placeholder">User ID</string>
    <string name="updateData">Start Trip</string>
    <string name="user_id">ID</string>
    <string name="acceleration_placeholder">Acceleration:</string>
    <string name="acceleration_value">Accelerometer Data</string>
    <string name="rotation_placeholder">Rotation:</string>
    <string name="rotation_value">Rotation Data</string>
    <string name="gravity_placeholder">Gravity:</string>
    <string name="gravity_value">Gravity Data</string>
    <string name="magnetism_placeholder">Magnetic Field:</string>
    <string name="magnetism_value">Magnetometer Data</string>
    <string name="gps_value">Location Data</string>
    <string name="driver_id">Insert id</string>
    <string name="stopData">Stop Trip</string>
    <string name="btnExitString">Back to main screen</string>

</resources>
