<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnUpdates"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/muli_bold"
        android:text="@string/updateData"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/gpsDta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/gpsDta"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/gps_value"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accDta"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/acceleration_value"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accPlcHolder" />

    <TextView
        android:id="@+id/gravDta"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/gravity_value"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gravPlcHolder" />

    <TextView
        android:id="@+id/magDta"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/magnetism_value"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/magPlcHolder" />

    <TextView
        android:id="@+id/rotDta"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/rotation_value"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/accDta"
        app:layout_constraintTop_toBottomOf="@+id/rotPlcHolder" />

    <TextView
        android:id="@+id/accPlcHolder"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/acceleration_placeholder"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/gravPlcHolder"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/gravity_placeholder"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accDta" />

    <TextView
        android:id="@+id/magPlcHolder"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/magnetism_placeholder"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rotDta" />

    <TextView
        android:id="@+id/rotPlcHolder"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/rotation_placeholder"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/accPlcHolder"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dd_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/user_id"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/usrId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usrId"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:fontFamily="@font/muli_bold"
        android:hint="User id (1)"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>